--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
   <title>Frontend Mentor | NFT preview card component</title>
-
+  <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
+  <div class="item">
+    <div class="image"></div>
+    <div class="description">
+      <h1>Equilibrium #3429</h1>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
+      <div class="offer">
+        <div class="price">0.041 ETH</div>
+        <div class="time-left">3 days left</div>
+      </div>
+      <div class="creator">Creation of Jules Wyvern</div>
+    </div>
+  </div>
 </body>
 </html>
